include_directories()
add_executable(Chapter2 2_2_1.cpp common.h)
add_executable(2_2_2 2_2_2.cpp)
add_executable(2_2_3 2_2_3.cpp)
add_executable(2_2_4 2_2_4.cpp)
add_executable(2_2_5 2_2_5.cpp)
add_executable(2_2_6 2_2_6.cpp)
add_executable(2_2_7 2_2_7.cpp)
add_executable(2_2_8 2_2_8.cpp)
add_executable(2_2_9 2_2_9.cpp)
add_executable(2_2_10 2_2_10.cpp)
add_executable(2_2_11 2_2_11.cpp)
add_executable(2_2_12 2_2_12.cpp)
add_executable(2_2_13 2_2_13.cpp)
add_executable(2_2_14 2_2_14.cpp)
add_executable(2_3_1 2_3_1.cpp)
add_executable(2_3_2 2_3_2.cpp)
add_executable(2_3_3 2_3_3.cpp)
add_executable(2_3_4 2_3_4.cpp)
add_executable(2_3_5 2_3_5.cpp)
add_executable(2_3_6 2_3_6.cpp)
add_executable(2_3_7 2_3_7.cpp)
add_executable(2_3_8 2_3_8.cpp)
add_executable(2_3_9 2_3_9.cpp)
add_executable(2_3_10 2_3_10.cpp)
add_executable(2_3_11 2_3_11.cpp)
add_executable(2_3_12 2_3_12.cpp)
add_executable(2_3_13 2_3_13.cpp)
add_executable(2_3_14 2_3_14.cpp)
add_executable(2_3_15 2_3_15.cpp)