include_directories()
add_executable(Chapter5 tree.h 5_3_3.cpp)
add_executable(5_3_4 5_3_4.cpp)
add_executable(5_3_5 5_3_5.cpp)
add_executable(5_3_7 5_3_7.cpp)
add_executable(5_3_8 5_3_8.cpp)
add_executable(5_3_9 5_3_9.cpp)
add_executable(5_3_10 5_3_10.cpp)
add_executable(5_3_11 5_3_11.cpp)
add_executable(5_3_12 5_3_12.cpp)